--- a/exercises/4. Úprava kvality obrazov.ipynb
+++ b/exercises/4. Úprava kvality obrazov.ipynb
@@ -4954,7 +4954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -7327,10 +7327,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x26088332ee0>"
+       "<matplotlib.image.AxesImage at 0x26087a99640>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
