--- a/exercises/6. Fourierova transformácia.ipynb
+++ b/exercises/6. Fourierova transformácia.ipynb
@@ -492,8 +492,8 @@
     "image = io.imread('image_conv.png', as_gray=True)\n",
     "result = np.zeros(image.shape)\n",
     "result[0:21, 0:20] = transform.rotate(image[44:65, 153:173], 180)\n",
-    "image_multiplication = np.real(fft.ifft2( fft.fft2(image) * fft.fft2(result) ))\n",
     "imageFFT = fft.fft2(image)\n",
+    "image_multiplication = np.real(fft.ifft2( imageFFT * fft.fft2(result) ))\n",
     "image_multiplication += np.abs(np.min(image_multiplication))\n",
     "imageFFT = fft.fftshift(imageFFT)\n",
     "scale = 255/np.max(image_multiplication)\n",
