--- a/exercises/6. Fourierova transformácia.ipynb
+++ b/exercises/6. Fourierova transformácia.ipynb
@@ -426,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1b83d5082e0>"
+       "<matplotlib.image.AxesImage at 0x1b83d19cc40>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
